test/tests/stages/17_supporting_dynamic_memory_allocation/valid/libraries/sizeof_extern.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: large_array
        None: 
        Array: 
          TLong: 1000
          Array: 
            TLong: 2000
            Double: 
        None: 
