test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/extra_credit/postfix_decr_void_pointer.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: malloc
        List[1]: 
          TIdentifier: size
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            ULong: 
          Pointer: 
            Void: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: buff
                  CSingleInit: 
                    CFunctionCall: 
                      TIdentifier: malloc
                      List[1]: 
                        CConstant: 
                          CConstInt: 
                            TInt: 100
                          None: 
                      None: 
                    None: 
                  Pointer: 
                    Void: 
                  None: 
            CS: 
              CExpression: 
                CAssignment: 
                  CPostfix: 
                  None: 
                  CBinary: 
                    CSubtract: 
                    CVar: 
                      TIdentifier: buff
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
                  None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
